# pragma

./: .dockerignore  Dockerfile  README.md  package.json
desktop/: build.sh
docs/: hosting-docker.md  hosting-linux.md
frontend/: elm-package.json  package.json
frontend/config/: webpack.config.dev.js  webpack.config.prod.js
frontend/scripts/: build.js
frontend/src/: Main.elm  index.js  main.css  main.scss
frontend/src/styles/: _pell.scss  main.scss
notex-server/: .gitignore  Cargo.toml
notex-server/migrations/2018-07-09-044212_create_notebooks/: up.sql
notex-server/migrations/2018-07-10-111408_create_notebooks/: up.sql
notex-server/migrations/2018-07-10-174759_create_content_blocks/: up.sql
notex-server/migrations/2018-07-13-052543_create_deletions/: down.sql  up.sql
notex-server/migrations/2018-10-05-185229_track_deletion_triggers/: up.sql
notex-server/src/: actix_state.rs  api.rs  assets.rs  data.rs  main.rs  repo.rs  repo_actor.rs  repo_id.rs  schema.rs
notex-server/src/notebooks/: data.rs  mod.rs  repo.rs  seed.rs
notex-web/: .gitignore  .tool-versions  README.md  bsconfig.json  bsconfig.strict.json  package.json
notex-web-re/: package.json
notex-web-re/config/: webpack.config.dev.js  webpack.config.prod.js
notex-web-re/src/: index.re
notex-web/config/: manifest.js  paths.js  polyfills.js  webpack.config.dev.js  webpack.config.prod.js  webpackDevServer.config.js
notex-web/public/: index.html  manifest.json
notex-web/scripts/: build.js  start.js
notex-web/src/: Api.re  App.re  AppState.re  App_test.re  Auth.re  ContentBlocks.re  Data.re  DataSync.re  DataSyncPersistence.re  DataSyncRetry.re  Db.re  Db.rei  DbSync.re  LocalStorage.re  Notebooks.re  Notes.re  RichText.re  State.re  globals.scss  index.re  index.scss  registerServiceWorker.js  utils.re
notex-web/src/components/: AddButton.re  AddButton.scss  CodeEditor.re  CodeEditor.scss  Icon.re  ListView.re  ListView.scss  NoNoteSelected.scss  NoteEditor.re  NoteEditor.scss  NotebookTitleEditor.re  Toast.re  (+5 more)
notix-server/: Cargo.toml
notix-server/src/: assets.rs  build_info.rs  main.rs
script/: build.sh  pre-commit.sh  setup.sh
server/: .gitignore  Cargo.toml  build.rs
server/migrations/2018-07-09-044212_create_notebooks/: down.sql  up.sql
server/migrations/2018-07-10-111408_create_notebooks/: down.sql  up.sql
server/migrations/2018-07-10-174759_create_content_blocks/: down.sql  up.sql
server/migrations/2018-10-05-185229_track_deletion_triggers/: down.sql
server/src/: actix_state.rs  api.rs  assets.rs  auth.rs  build_info.rs  data.rs  lib.rs  main.rs  repo.rs  repo_actor.rs  repo_connection.rs  schema.rs
server/src/static/: text_formatting.html  welcome.html
web/: NOTICE.md  bsconfig.json  bsconfig.strict.json  package.json
web/config/: env.js  manifest.js  webpack.config.dev.js  webpack.config.prod.js
web/public/: index.html
web/scripts/: start.js
web/src/: Api.re  App.re  AppState.re  Auth.re  ContentBlocks.re  Data.re  DataSync.re  DataSyncPersistence.re  DataSyncRetry.re  Db.re  Db.rei  DbMigrations.re  DbSync.re  LocalStorage.re  Notebooks.re  Notes.re  RichText.re  UiTypes.re  index.re  index.scss  utils.re
(+56 files in other folders)
