[package]
name = "pragma"
version = "0.1.0"
authors = ["Pascal Widdershoven <hello@pascalw.me>"]
build = "build.rs"

[build-dependencies]
vergen = "~0.1.0"

[dependencies]
actix = "0.7"
actix-web = "0.7"
tokio-timer = "~0.2.7"
rust-embed="3.0.0"
mime_guess = "2.0.0-alpha.5"
log = "0.4"
env_logger = "0.5.10"
lazy_static = "1.0.1"
serde = "1.0.70"
serde_json = "1.0.22"
serde_derive = "1.0.70"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.3.0", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = "1.3.0"
r2d2 = "0.8.2"
futures = "0.1"
num_cpus = "1.0"
nanoid = "0.2.0"
rand = "0.5.5"
listenfd = "0.3.3"
libsqlite3-sys = { version = "*", features = ["bundled"] }
regex = "1"

[features]
embedded_assets = []
